force-app/main/default/objects/Nebula__Log__c/fields/Nebula__ApiVersion__c.field-meta.xml
<CustomField>
    <fullName>Nebula__ApiVersion__c</fullName>
    <description>The Salesforce release (API version) of the environment</description>
    <inlineHelpText>The Salesforce release (API version) of the environment</inlineHelpText>
    <label>API Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>v53.0</fullName>
                <label>v53.0 - Winter &apos;22 Release</label>
            </value>
            <value>
                <fullName>v52.0</fullName>
                <label>v52.0 - Summer &apos;21 Release</label>
            </value>
            <value>
                <fullName>v51.0</fullName>
                <label>v51.0 - Spring &apos;21 Release</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>