force-app/main/default/objects/Nebula__Log__c/fields/Nebula__ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>Nebula__ClosedDate__c</fullName>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>