force-app/main/default/objects/Nebula__Log__c/fields/Nebula__Comments__c.field-meta.xml
<CustomField>
    <fullName>Nebula__Comments__c</fullName>
    <label>Comments</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>