force-app/main/default/objects/Nebula__Log__c/fields/Nebula__EndTime__c.field-meta.xml
<CustomField>
    <fullName>Nebula__EndTime__c</fullName>
    <label>End Time</label>
    <summarizedField>Nebula__LogEntry__c.Nebula__Timestamp__c</summarizedField>
    <summaryForeignKey>Nebula__LogEntry__c.Nebula__Log__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>