force-app/main/default/objects/Nebula__Log__c/fields/Nebula__IsClosed__c.field-meta.xml
<CustomField>
    <fullName>Nebula__IsClosed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Closed</label>
    <type>Checkbox</type>
</CustomField>