force-app/main/default/objects/Nebula__Log__c/fields/Nebula__LogEntriesSummary__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LogEntriesSummary__c</fullName>
    <formula>TEXT(Nebula__TotalLogEntries__c) + &apos; total entries&apos;
+ IF(
    Nebula__TotalERRORLogEntries__c = 0,
    &apos;&apos;,
    &apos;, &apos; + TEXT(Nebula__TotalERRORLogEntries__c) + &apos; error(s)&apos;
)
+ IF(
    Nebula__TotalWARNLogEntries__c = 0,
    &apos;&apos;,
    &apos;, &apos; + TEXT(Nebula__TotalWARNLogEntries__c) + &apos; warning(s)&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary</label>
    <type>Text</type>
</CustomField>