force-app/main/default/objects/Nebula__Log__c/fields/Nebula__LoggedByUsernameLink__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LoggedByUsernameLink__c</fullName>
    <formula>HYPERLINK(
    Nebula__LoggedBy__c, 
    IF(ISBLANK(Nebula__LoggedByUsername__c), Nebula__LoggedBy__r.Username, Nebula__LoggedByUsername__c), 
    &apos;_top&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Username</label>
    <type>Text</type>
</CustomField>