force-app/main/default/objects/Nebula__Log__c/fields/Nebula__LoginHistoryId__c.field-meta.xml
<CustomField>
    <fullName>Nebula__LoginHistoryId__c</fullName>
    <label>Login History ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>