force-app/main/default/objects/Nebula__Log__c/fields/Nebula__NetworkLoginUrl__c.field-meta.xml
<CustomField>
    <fullName>Nebula__NetworkLoginUrl__c</fullName>
    <label>Site Login URL</label>
    <type>Url</type>
</CustomField>