force-app/main/default/objects/Nebula__Log__c/fields/Nebula__OrganizationId__c.field-meta.xml
<CustomField>
    <fullName>Nebula__OrganizationId__c</fullName>
    <label>Organization ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>