force-app/main/default/objects/Nebula__Log__c/fields/Nebula__OrganizationName__c.field-meta.xml
<CustomField>
    <fullName>Nebula__OrganizationName__c</fullName>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>