force-app/main/default/objects/Nebula__Log__c/fields/Nebula__OrganizationType__c.field-meta.xml
<CustomField>
    <fullName>Nebula__OrganizationType__c</fullName>
    <label>Organization Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Team Edition</fullName>
            </value>
            <value>
                <fullName>Professional Edition</fullName>
            </value>
            <value>
                <fullName>Enterprise Edition</fullName>
            </value>
            <value>
                <fullName>Developer Edition</fullName>
            </value>
            <value>
                <fullName>Personal Edition</fullName>
            </value>
            <value>
                <fullName>Unlimited Edition</fullName>
            </value>
            <value>
                <fullName>Contact Manager Edition</fullName>
            </value>
            <value>
                <fullName>Base Edition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>