force-app/main/default/objects/Nebula__Log__c/fields/Nebula__ParentLog__c.field-meta.xml
<CustomField>
    <fullName>Nebula__ParentLog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The log from the original transaction that initiated a child log - for example, batch jobs have start, execute and finish methods. All 3 are considered separate transactions. By using the parent log, logs from all 3 transactions can be linked together.</description>
    <inlineHelpText>The log from the original transaction that initiated a child log - for example, batch jobs have start, execute and finish methods. All 3 are considered separate transactions. By using the parent log, logs from all 3 transactions can be linked together.</inlineHelpText>
    <label>Parent Log</label>
    <referenceTo>Nebula__Log__c</referenceTo>
    <relationshipLabel>Related Logs</relationshipLabel>
    <relationshipName>ChildLogs</relationshipName>
    <type>Lookup</type>
</CustomField>