force-app/main/default/objects/Nebula__Log__c/fields/Nebula__Priority__c.field-meta.xml
<CustomField>
    <fullName>Nebula__Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
                <color>#FF6666</color>
                <label>High</label>
            </value>
            <value>
                <fullName>Medium</fullName>
                <color>#FFCC66</color>
                <label>Medium</label>
            </value>
            <value>
                <fullName>Low</fullName>
                <color>#66FF99</color>
                <default>true</default>
                <label>Low</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>