force-app/main/default/objects/Nebula__Log__c/fields/Nebula__ProfileId__c.field-meta.xml
<CustomField>
    <fullName>Nebula__ProfileId__c</fullName>
    <label>Profile ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>