force-app/main/default/objects/Nebula__Log__c/fields/Nebula__ProfileLink__c.field-meta.xml
<CustomField>
    <fullName>Nebula__ProfileLink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + Nebula__ProfileId__c, Nebula__ProfileName__c, &apos;_top&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Profile</label>
    <type>Text</type>
</CustomField>