force-app/main/default/objects/Nebula__Log__c/fields/Nebula__TimeZoneId__c.field-meta.xml
<CustomField>
    <fullName>Nebula__TimeZoneId__c</fullName>
    <label>Time Zone ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>