force-app/main/default/objects/Nebula__Log__c/fields/Nebula__TimeZoneName__c.field-meta.xml
<CustomField>
    <fullName>Nebula__TimeZoneName__c</fullName>
    <label>Time Zone Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>