force-app/main/default/objects/Nebula__Log__c/fields/Nebula__TotalINFOLogEntries__c.field-meta.xml
<CustomField>
    <fullName>Nebula__TotalINFOLogEntries__c</fullName>
    <description>The total number of log entries with logging level == &apos;INFO&apos;</description>
    <inlineHelpText>The total number of log entries with logging level == &apos;INFO&apos;</inlineHelpText>
    <label>Total INFO Entries</label>
    <summaryFilterItems>
        <field>Nebula__LogEntry__c.Nebula__LoggingLevel__c</field>
        <operation>equals</operation>
        <value>INFO</value>
    </summaryFilterItems>
    <summaryForeignKey>Nebula__LogEntry__c.Nebula__Log__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>