force-app/main/default/objects/Nebula__Log__c/fields/Nebula__TotalWARNLogEntries__c.field-meta.xml
<CustomField>
    <fullName>Nebula__TotalWARNLogEntries__c</fullName>
    <description>The total number of log entries with logging level == &apos;WARN&apos;</description>
    <inlineHelpText>The total number of log entries with logging level == &apos;WARN&apos;</inlineHelpText>
    <label>Total WARN Entries</label>
    <summaryFilterItems>
        <field>Nebula__LogEntry__c.Nebula__LoggingLevel__c</field>
        <operation>equals</operation>
        <value>WARN</value>
    </summaryFilterItems>
    <summaryForeignKey>Nebula__LogEntry__c.Nebula__Log__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>