force-app/main/default/objects/Nebula__Log__c/fields/Nebula__UserLicenseName__c.field-meta.xml
<CustomField>
    <fullName>Nebula__UserLicenseName__c</fullName>
    <label>User License Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Analytics Cloud Integration User</fullName>
            </value>
            <value>
                <fullName>Authenticated Website</fullName>
            </value>
            <value>
                <fullName>Chatter External</fullName>
            </value>
            <value>
                <fullName>Chatter Free</fullName>
            </value>
            <value>
                <fullName>Cloud Integration User</fullName>
            </value>
            <value>
                <fullName>Customer Community</fullName>
            </value>
            <value>
                <fullName>Customer Community Login</fullName>
            </value>
            <value>
                <fullName>Customer Community Plus</fullName>
            </value>
            <value>
                <fullName>Customer Community Plus Login</fullName>
            </value>
            <value>
                <fullName>Customer Portal Manager Custom</fullName>
            </value>
            <value>
                <fullName>Customer Portal Manager Standard</fullName>
            </value>
            <value>
                <fullName>External Identity</fullName>
            </value>
            <value>
                <fullName>Force.com - App Subscription</fullName>
            </value>
            <value>
                <fullName>Force.com - Free</fullName>
            </value>
            <value>
                <fullName>Gold Partner</fullName>
            </value>
            <value>
                <fullName>High Volume Customer Portal</fullName>
            </value>
            <value>
                <fullName>Identity</fullName>
            </value>
            <value>
                <fullName>Partner App Subscription</fullName>
            </value>
            <value>
                <fullName>Partner Community</fullName>
            </value>
            <value>
                <fullName>Partner Community Login</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Salesforce Platform</fullName>
            </value>
            <value>
                <fullName>Silver Partner</fullName>
            </value>
            <value>
                <fullName>Work.com Only</fullName>
            </value>
            <value>
                <fullName>XOrg Proxy User</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>