force-app/main/default/objects/Nebula__Log__c/fields/Nebula__UserLoggingLevel__c.field-meta.xml
<CustomField>
    <fullName>Nebula__UserLoggingLevel__c</fullName>
    <label>User Logging Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nebula__LoggingLevel</valueSetName>
    </valueSet>
</CustomField>