force-app/main/default/objects/Nebula__Log__c/fields/Nebula__UserLoggingLevelOrdinal__c.field-meta.xml
<CustomField>
    <fullName>Nebula__UserLoggingLevelOrdinal__c</fullName>
    <label>User Logging Level Ordinal</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>