force-app/main/default/objects/Nebula__Log__c/listViews/Nebula__AllClosedLogs.listView-meta.xml
<ListView>
    <fullName>Nebula__AllClosedLogs</fullName>
    <columns>NAME</columns>
    <columns>Nebula__LoggedByUsernameLink__c</columns>
    <columns>Nebula__StartTime__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Nebula__Priority__c</columns>
    <columns>Nebula__Status__c</columns>
    <columns>Nebula__ClosedBy__c</columns>
    <columns>Nebula__ClosedDate__c</columns>
    <columns>Nebula__Issue__c</columns>
    <columns>Nebula__Comments__c</columns>
    <columns>Nebula__TransactionId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Nebula__IsClosed__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Closed Logs</label>
</ListView>