force-app/main/default/objects/Nebula__Log__c/listViews/Nebula__AllLogs.listView-meta.xml
<ListView>
    <fullName>Nebula__AllLogs</fullName>
    <columns>NAME</columns>
    <columns>Nebula__LoggedByUsernameLink__c</columns>
    <columns>Nebula__StartTime__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Nebula__Priority__c</columns>
    <columns>Nebula__Status__c</columns>
    <columns>Nebula__TransactionId__c</columns>
    <columns>Nebula__TotalLimitsCpuTimeUsed__c</columns>
    <columns>Nebula__TotalLogEntries__c</columns>
    <columns>Nebula__TotalERRORLogEntries__c</columns>
    <columns>Nebula__TotalWARNLogEntries__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Logs</label>
</ListView>