force-app/main/default/objects/Nebula__Log__c/listViews/Nebula__AllLogsWithERRORorWARNEntries.listView-meta.xml
<ListView>
    <fullName>Nebula__AllLogsWithERRORorWARNEntries</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Nebula__LoggedByUsernameLink__c</columns>
    <columns>Nebula__StartTime__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Nebula__Priority__c</columns>
    <columns>Nebula__Status__c</columns>
    <columns>Nebula__TransactionId__c</columns>
    <columns>Nebula__TotalLimitsCpuTimeUsed__c</columns>
    <columns>Nebula__TotalLogEntries__c</columns>
    <columns>Nebula__TotalERRORLogEntries__c</columns>
    <columns>Nebula__TotalWARNLogEntries__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Nebula__TotalERRORLogEntries__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Nebula__TotalWARNLogEntries__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All Logs with ERROR or WARN Entries</label>
</ListView>